# ScrumAgent

./: .env.example  .gitignore  CLAUDE_LOCAL_PROMPT.md  Dockerfile  README.md  docker-compose.yaml  langgraph.json  pyproject.toml  requirements.txt
config/: mcp_config.yaml  scrum_promts.py  taiga_discord_maps.yaml.example
docs/: WEBHOOK.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secrets.yaml  secrets.yaml.example  service.yaml
mcp_servers/: discord_chroma_server.py
scrumagent/: agent.py  build_agent_graph.py  main_discord_bot.py  util_logging.py  utils.py  webhook_server.py
scrumagent/agents/: aider_agent.py  coder_agent.py  jira_agent.py  supervisor_agent.py
scrumagent/data_collector/: base_collector.py  discord_chat_collector.py  folder_documents_collector.py
scrumagent/tools/: discord_tool.py  gitea_tools.py  jira_tool.py
tests/: test_agent.py  test_integration.py  test_mcp_discord_chroma.py  test_standup_schedule.py
